assets/css/development/style.css
/* ... */
@media (max-width: 56.25em) {
  div.card-image #mobile-surgeons {
    display: block;
  }
}
div.card-image #desktop-surgeons {
  display: none;
}
div.card-image img {
  width: 250px;
  height: 100%;
}
div.card-image.last h3 {
  align-self: center;
}
div.card-image.last img {
  width: 160px;
}
div.card-image.last > * {
  display: flex;
  justify-content: space-between;
}
div.card-image.last > *:not(:last-of-type) {
  margin-bottom: 3rem;
}

@media (min-width: 56.3125em) {
  div.card-image #desktop-surgeons {
    display: block;
  }
  div.card-image #mobile-surgeons {
    display: none;
  }
}
.right-image > *:first-child {
  padding-right: 8.6%;
}
@media (max-width: 37.5em) {
  .right-image p {
    margin-bottom: 0;
  }
}

.left-image > *:last-child {
  padding-left: 8.6%;
}
@media (max-width: 37.5em) {
  .left-image p {
    margin-bottom: 0;
  }
}

.lists {
  list-style: none;
}
.lists.icon-top > li {
  background-position: left 6%;
}
.lists > li {
  background: url("/roche/assets/media/image/flower-bullet.png") left center no-repeat;
  padding-left: 30px;
  margin-bottom: 5px;
}

.logo-box {
  position: absolute;
  top: 1.875rem;
  left: 6%;
}
.logo-box img {
  width: 80px;
}
@media (max-width: 56.25em) {
  .logo-box {
    left: 7%;
    top: 1.125rem;
    z-index: 99;
  }
}
@media (max-width: 56.25em) {
  .logo-box {
    width: 4.3rem;
  }
}

.nav-tabs {
  border-bottom: 0 !important;
}
.nav-tabs a {
  flex: 1;
  border: 0 !important;
  border-radius: 0 !important;
}
.nav-tabs a:first-child {
  background-image: linear-gradient(to right, #e2accb, #c96ea3);
}
.nav-tabs a:nth-child(2) {
  background-image: linear-gradient(to right, #c96ea3, #ba4d8d);
}
.nav-tabs a:last-child {
  background-image: linear-gradient(to right, #a15087, #82296e);
}
.nav-tabs a:hover, .nav-tabs a:active {
  background-image: linear-gradient(#85cdc7, #85cdc7);
}

.sub-tabs > a, .sub-tabs-2 > a {
  color: #fff !important;
  font-size: 14px !important;
  font-weight: bold !important;
  display: flex !important;
  align-items: center;
  justify-content: center;
}

.sub-tabs-2 {
  background-image: linear-gradient(to right, #b65c97, #9a4889);
  margin-right: -1px;
}

.sub-tabs-2 a:hover, .sub-tabs-2 a.active,
.sub-tabs a:hover, .sub-tabs a.active {
  background-image: linear-gradient(#85cdc7, #85cdc7) !important;
}

.sub-tabs.sub-tabs-sticky-early > a:first-child {
  padding-left: 0;
}

.sub-tabs.sub-tabs-sticky-early > a:not(:last-of-type) {
  margin-right: -118px;
}
.sub-tabs.second-row > a:not(:last-of-type) {
  margin-right: -161px;
}

@media (max-width: 37.5em) {
  .sub-tabs.sub-tabs-sticky-early > a:not(:last-of-type) {
    margin-right: -37px;
  }
}

.stages-nav .text-box {
  background-color: #c769a0;
  color: #fff;
  padding: 60px 0;
  text-align: center;
  font-size: 18px;
}

.sub-tabs > a {
  color: #fff !important;
  display: block;
  text-align: center;
}
.sub-tabs > a:first-child {
  -webkit-clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
  clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
  margin-right: -110px;
  position: relative;
  z-index: 99;
}
.sub-tabs > a:nth-child(2) {
  -webkit-clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
  clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
  margin-right: -158px;
}

.tab-heading {
  color: #85cdc7;
  font-size: 1.5rem;
  margin-bottom: 1rem;
}

.tab-text {
  font-size: 17px;
  padding-right: 134px;
  color: #000;
}

.tab-sub-text {
  margin-top: 40px;
}
@media (max-width: 37.5em) {
  .tab-sub-text {
    margin-top: 20px;
  }
}

@media (max-width: 89.375em) {
  .top-main-nav {
    max-width: 1000px !important;
  }
}
@media (max-width: 37.5em) {
  .lifestyle-tips {
    padding: 0 !important;
  }
}
.lifestyle-tips .text-center {
  font-weight: 700;
  margin: 3.4rem 0;
  color: #994789;
}
@media (max-width: 37.5em) {
  .lifestyle-tips .text-center {
    margin: 25px;
  }
}
.lifestyle-tips .carousel {
  margin-bottom: 4.5rem;
}
@media (max-width: 37.5em) {
  .lifestyle-tips .tab-heading {
    margin-top: 1rem;
    text-align: center;
    padding: 0 2rem;
  }
}
@media (max-width: 37.5em) {
  .lifestyle-tips .tab-text {
    padding-right: 0;
    text-align: center;
    padding: 0 1.5rem;
    padding-bottom: 15px;
  }
}

.video-wrapper {
  position: absolute;
  width: 100%;
}

#video-playback {
  display: none;
  position: relative;
  z-index: 99;
}

#my-video {
  height: 100vh;
  width: 100% !important;
}

.vjs-control-bar {
  margin: 0 auto;
  bottom: 20% !important;
  width: 70% !important;
  background-color: rgba(0, 0, 0, 0.2) !important;
}
@media (max-width: 37.5em) {
  .vjs-control-bar {
    bottom: 13% !important;
    width: 90% !important;
  }
}

.vjs-big-play-button {
  display: none !important;
}

header {
  height: 100vh;
  background-size: cover;
  background-position: right;
  background-repeat: no-repeat;
  background-color: #faa4b7;
}
header.roche-header {
  background-image: url("/assets/media/image/bc-header-desktop.png");
}
@media (max-width: 75em) {
  header.roche-header {
    background-image: url("/assets/media/image/bc-header-mobile.png");
  }
}
header.roche-header h1 > span:first-child {
  font-family: "Merriweather", serif;
  font-weight: 700;
}
header.her2-header {
  background-image: url("/assets/media/image/her2-header-desktop.png");
}
@media (max-width: 56.25em) {
  header.her2-header {
    margin-bottom: -4rem;
  }
}
@media (max-width: 37.5em) {
  header.her2-header {
    background-image: url("/assets/media/image/her2-header-mobile.png");
    background-position: top;
  }
}
@media (max-width: 37.5em) {
  header.her2-header .title-box {
    top: 65%;
  }
}
header.her2-header .title-box h1 {
  font-family: "Merriweather", serif;
  font-weight: 700;
}
@media (max-width: 37.5em) {
  header.her2-header .title-box h1 {
    font-size: 1.5625rem;
    line-height: 1.2;
  }
}

.title-box {
  position: absolute;
  top: 18.125rem;
  left: 13%;
}
/* ... */

